# range-fea

./: .claudeignore  .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  Config.cmake
src/TetGen/: CMakeLists.txt
src/fea/: CMakeLists.txt
src/fea-solver/: CMakeLists.txt
src/fea-solver/src/: application.cpp  application.h  command_processor.cpp  command_processor.h  main.cpp  main_task.cpp  main_task.h  solver_input.cpp  solver_input.h  solver_task.cpp  solver_task.h
src/fea/desktop/: Range.desktop
src/fea/doc/: RELEASE_NOTES.md  RELEASE_NOTES.txt
src/fea/etc/: openssl.cnf
src/fea/help/actions/en/: action_application-about.md  action_application-license.md  action_application-quit.md  action_application-release_notes.md  action_application-settings.md  action_application-update.md  action_geometry-bool_intersection.md  action_geometry-create_element.md  action_geometry-cut_create.md  action_geometry-cut_edit.md  action_geometry-dev_consolidate.md  action_geometry-dev_export_intersected_elements.md  action_geometry-dev_purge_unused_nodes.md  action_geometry-dev_remove_duplicate_elements.md  action_geometry-dev_remove_duplicate_nodes.md  action_geometry-dev_tetrahedralize_surface.md  action_geometry-draw_circle.md  action_geometry-draw_ellipse.md  action_geometry-draw_line.md  action_geometry-draw_point.md  action_geometry-draw_quadrilateral.md  action_geometry-draw_tetrahedron.md  action_geometry-draw_triangle.md  action_geometry-entity_merge.md  action_geometry-entity_remove.md  action_geometry-find_sliver_elements.md  action_geometry-fix_sliver_elements.md  action_geometry-iso_create.md  action_geometry-line_generate_from_edges.md  action_geometry-merge_near_nodes.md  action_geometry-move_node.md  action_geometry-remove_element.md  action_geometry-scalar_field_create.md  action_geometry-scalar_field_edit.md  action_geometry-stream_line_create.md  action_geometry-stream_line_edit.md  action_geometry-surface_close_hole.md  action_geometry-surface_coarsen.md  action_geometry-surface_mark.md  action_geometry-surface_sync_normals.md  (+21 more)
src/fea/help/actions/sk/: action_application-about.md  action_application-about_qt.md  action_application-help.md  action_application-license.md  action_application-quit.md  action_application-release_notes.md  action_application-settings.md  action_application-update.md  action_geometry-bool_difference.md  action_geometry-bool_intersection.md  action_geometry-bool_union.md  action_geometry-break_intersected_elements.md  action_geometry-create_element.md  action_geometry-cut_create.md  action_geometry-cut_edit.md  action_geometry-dev_consolidate.md  action_geometry-dev_export_intersected_elements.md  action_geometry-dev_export_sliver_elements.md  action_geometry-dev_point_inside_surface.md  action_geometry-dev_purge_unused_elements.md  action_geometry-dev_purge_unused_nodes.md  action_geometry-dev_remove_duplicate_elements.md  action_geometry-dev_remove_duplicate_nodes.md  action_geometry-dev_tetrahedralize_surface.md  action_geometry-draw_circle.md  action_geometry-draw_cylinder.md  action_geometry-draw_ellipse.md  action_geometry-draw_hexahedron.md  action_geometry-draw_line.md  action_geometry-draw_point.md  action_geometry-draw_quadrilateral.md  action_geometry-draw_raw.md  action_geometry-draw_sphere.md  action_geometry-draw_tetrahedron.md  action_geometry-draw_triangle.md  action_geometry-entity_merge.md  action_geometry-entity_remove.md  action_geometry-find_intersected_elements.md  action_geometry-find_sliver_elements.md  action_geometry-fix_sliver_elements.md  (+54 more)
src/fea/help/general/en/: general_Boundary_condition.md  general_Environment_condition.md  general_Initial_condition.md  general_Model.md  general_Problem.md  general_Results.md  general_Solver.md  index.json
src/fea/help/general/sk/: general_Boundary_condition.md  general_Environment_condition.md  general_Initial_condition.md  general_Material.md  general_Model.md  general_Problem.md  general_Problem_type.md  general_Results.md  general_Solver.md  general_index.md  index.json
src/fea/help/tips/en/: tip_index.md
src/fea/help/tips/sk/: index.json
src/fea/help/tutorials/en/: tutorial_Contaminant_dispersion_in_fluids.md  (+5 more)
src/fea/materials/: 1334383c-a138-4f76-90a9-70feee2ef58d.rbmt  155e0a3f-95fd-413c-92ad-ae4bfa3ebd6b.rbmt  3241da71-dacd-4af1-8835-ac39f6141477.rbmt  5153010f-37ee-4fe4-9f2d-f70568d657eb.rbmt  5553a10a-d647-4cba-9930-ba133ac27bee.rbmt  59415be7-a9a3-4072-b47a-2470c30d7c9d.rbmt  75d06abe-a37d-4f15-a092-ecac1adbb148.rbmt  9cef87c9-79dd-4da6-a146-4ad13c6061b4.rbmt  a9b1b0c4-8485-4151-bf2a-c04c0dcae0e5.rbmt  aa56438b-d83f-4308-b0db-820aae00ec63.rbmt  b67c0e0a-5bba-44c5-bf7d-62a1ad4f63ff.rbmt  c5cdb8ac-ba64-44e4-939f-76a1b3898b4c.rbmt  d10193be-fdfe-43cc-a3d1-e2daeb0b47c0.rbmt  d278e3a6-4b00-4e9b-b397-79ec0dfd6ad6.rbmt  e8d8daa1-9914-4cef-8c43-1e21cab3ed6a.rbmt  f323ed36-f787-42c6-b212-246f87f3bc7a.rbmt  f8176459-5677-4c8b-8dca-6b82778a8e3a.rbmt
src/fea/pixmaps/: range-fea.icns
src/fea/src/: action.cpp  action.h  action_list.cpp  action_list.h  application.cpp  application.h  application_settings.cpp  application_settings.h  application_settings_dialog.cpp  application_settings_dialog.h  application_settings_widget.cpp  application_settings_widget.h  bc_manager_tree.cpp  bc_manager_tree.h  bc_tree.cpp  bc_tree.h  bool_difference_dialog.cpp  bool_difference_dialog.h  bool_intersection_dialog.cpp  bool_intersection_dialog.h  bool_union_dialog.cpp  bool_union_dialog.h  break_intersected_elements_dialog.cpp  break_intersected_elements_dialog.h  central_tab_widget.cpp  central_tab_widget.h  clipping_plane_widget.cpp  clipping_plane_widget.h  coarsen_surface_dialog.cpp  coarsen_surface_dialog.h  color.cpp  color.h  color_combo_box.cpp  color_combo_box.h  color_scale.cpp  color_scale.h  color_scale_combo_box.cpp  color_scale_combo_box.h  component_edit_dialog.cpp  component_edit_dialog.h  (+316 more)
src/fea/src/shaders/: flat.frag  flat.vert  main.frag  main.vert
src/fea/translations/: en.ts  sk.ts
src/packaging/windows/: run_iscc.cmake.in  setup.iss.in
(+9 files in other folders)
